# tokencrush

./: .gitignore  LEGAL.md  LICENSE  README.md  pyproject.toml
.sisyphus/plans/: tokencrush.md
src/tokencrush/: __init__.py  cache.py  cli.py  compressor.py  config.py  daemon.py  free_api.py  local.py  patch.py  providers.py  proxy.py  router.py  sdk.py  shell_config.py
src/tokencrush/interceptors/: __init__.py  anthropic_interceptor.py  gemini_interceptor.py  litellm_interceptor.py  openai_interceptor.py
tests/: conftest.py  test_cache.py  test_cli.py  test_compressor.py  test_config.py  test_enable.py  test_example.py  test_free_api.py  test_integration.py  test_integration_v2.py  test_local.py  test_patch.py  test_providers.py  test_router.py  test_sdk.py
