[project]
name = "tokencrush"
version = "2.0.1"
description = "100% FREE Open Source LLM Optimizer - Reduce API costs by 95-100% with semantic caching, local LLM, and free API routing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "llmlingua>=0.2.0",
    "litellm>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    # v2 dependencies (100% FREE)
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
tokencrush = "tokencrush.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokencrush"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
